# system_software_personal

./: .gitmodules  Cargo.toml  task.md
.github/workflows/: rust.yml
src/: booter.rs  btree.rs  buffer.rs  error.rs  main.rs  node.rs  page.rs  pager.rs  table.rs  table_manager.rs  test.rs  util.rs
src/data_item/: buffer.rs
src/index/: btree.rs  key_value_pair.rs  mod.rs  node.rs
src/page/: mod.rs  page_item.rs  pager.rs
src/table/: booter.rs  entry.rs  field.rs  mod.rs  table_item.rs  table_manager.rs
src/test/: mod.rs  test_btree.rs  test_buffer.rs  test_field.rs  test_node.rs  test_page_item.rs  test_pager.rs  test_table_manager.rs
src/util/: data_gen.rs  error.rs  mod.rs  test_lib.rs
