[package]
name = "system_software"
version = "0.1.0"
authors = ["Kevin Axel <kevinaxel@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
memmap = "0.7.0"
sqlparser = { path = 'src/submodule/sqlparser-rs' }
