[package]
name = "system_software"
version = "0.1.0"
authors = ["Kevin Axel <kevinaxel@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
memmap = "0.7.0"
env_logger = { version = "0.6", default-features = false }
futures = "0.3"
http = "0.1"
k8s-openapi = { version = "0.8.0", features = ["v1_13"] }
kube = "0.35"
log = "0.4"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.2"
flatbuffers = "0.6.0"
prost = "0.6"
prost-types = "0.6"
reqwest = "0.9.18"
uuid = { version = "0.8", features = ["serde", "v4"] }
sqlparser = "0.6.1"
async-channel = "1.4.0"
crossbeam = "0.7"
smol = { version = "0.1.18", features = ["tokio02"] }
async-trait = "0.1.36"
random-fast-rng = "0.1.1"
structopt = "0.3"
etcd-client = "0.5"
fnv = "1.0.7"

arrow = { git = "https://github.com/apache/arrow", rev = "3cb0bd82"}
arrow-flight = { git = "https://github.com/apache/arrow", rev = "3cb0bd82" }
datafusion = { git = "https://github.com/apache/arrow", rev = "3cb0bd82" }
parquet = { git = "https://github.com/apache/arrow", rev = "3cb0bd82" }

ballista = { path = 'submodule/ballista/rust/ballista'}

[[bin]]
name = "executor"
path = "submodule/ballista/rust/ballista/src/bin/executor.rs"

[build-dependencies]
prost-build = { version = "0.6.1" }

[dev-dependencies]
criterion = "0.3"